# senfus

./: CMakeLists.txt  codegen_testing.py  config.py  foo.py  run_gui.py  se23_testing.py  se323.py
codegen/: __init__.py  get_code.py
codegen/cpp/: CMakeLists.txt
codegen/cpp/generated_symforce/: myfunc.h
codegen/cpp/templates/: main.cpp.jinja
generated_output/: main.cpp  myfunction.h
insp/tmp/: forth_order.py  rot3_jacs.py  se23_testing.py  wedge.py
insp/tmp/test/: test_pose23.py  test_pose23_SE23.py
se23/: integration.py  pose23.py  pose23_SE23.py
states/: __init__.py  covariance.py  imu.py  symstate.py
